# rpf-cli

./: .gitignore  Cargo.toml  README.md  RPF.md  RpfFile.cs  RpfManager.cs  rust.txt
.github/workflows/: release.yml
src/: main.rs  rpf.rs
src/commands/: create.rs  extract.rs  info.rs  list.rs  mod.rs  tree.rs  verify.rs  ytd.rs
